--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,37 +1,26 @@
 /*================CONTAINER===============*/
 
-// .container {
-//   width: 1200px;
-//   padding: 0 15px;
-//   margin: 0 auto;
-// }
-
 .container {
   width: 100%;
+  // max-width: 480px;
   padding: 0 15px;
   margin: 0 auto;
+  outline: springgreen;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 
 .container.page-header {
   display: flex;
   justify-content: space-between;
-  // align-items: flex-start;
-}
-
-@media screen and (min-width: 480px) {
-  .container {
-    max-width: 450px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 738px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .container {
-    max-width: 1200px;
-  }
 }
