--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -109,13 +109,37 @@
   }
 }
 
-.mobile-menu-btn .icon-cross {
-  display: none;
+.mobile-menu-btn-close {
+  position: absolute;
+  top: 8px;
+  right: 15px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 40px;
+  height: 40px;
+  background: $primary-white-color;
+  border: none;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+
+  &:hover,
+  &:focus {
+    fill: $accent-color;
+  }
 }
 
-.mobile-menu-btn.is-open .icon-cross {
-  display: block;
-}
-.mobile-menu-btn.is-open .icon-menu {
-  display: none;
-}
+// .mobile-menu-btn .icon-cross {
+//   display: none;
+// }
+
+// .mobile-menu-btn.is-open .icon-cross {
+//   display: block;
+// }
+// .mobile-menu-btn.is-open .icon-menu {
+//   display: none;
+// }
