--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -1,15 +1,35 @@
 /* ========MOBILE_MENU========*/
 
 .mobile-menu-container {
-  position: relative;
+  // position: absolute;
+  // display: none;
+  // top: 0;
+  // left: 0;
+  // background-color: $primary-white-color;
+  // padding-left: 40px;
+  // padding-top: 48px;
+  // width: 100%;
+  // max-width: 480px;
+  // height: 100% vh;
+  // // transform: translateX(-50%);
+  // // left: 50%;
+
+  // height: 95%;
+  // max-height: 796px;
+
+  // overflow: scroll;
+  // width: 100%;
+  // max-width: 480px;
+
+  position: absolute;
   display: none;
   background-color: $primary-white-color;
   padding-left: 40px;
   padding-top: 48px;
   padding-bottom: 48px;
+  // width: 100%;
   max-width: 480px;
   height: 796px;
-  display: block;
   border: 2px solid turquoise;
 
   color: $maine-text-color;
@@ -21,50 +41,40 @@
 
   &.is-open {
     display: block;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .mobile-menu-container {
-    display: none;
     position: absolute;
-    // top: 100%;
-    top: 0;
-    left: 0;
-    width: 100%;
+    top: 0.1px;
+  }
+
+  @media screen and (min-width: 768px) {
+    border: 2px solid rebeccapurple;
+    display: flex;
+    position: static;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+    min-width: 768px;
+    height: 100%;
+
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.143;
   }
 }
 
-.mobile-menu-btn {
-  display: block;
-  width: 40px;
-  height: 40px;
-  // padding: 10px 0;
-}
-
-.mobile-menu-btn-close {
-  position: absolute;
-  top: 8px;
-  right: 15px;
-
+.site-nav {
   display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 40px;
-  height: 40px;
-  background: $primary-white-color;
-  border: none;
-  box-sizing: border-box;
-
-  &:hover,
-  &:focus {
-    fill: $accent-color;
-  }
+  justify-content: space-between;
 }
 
 .site-nav-list {
   margin-bottom: 302px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+    margin-left: 88px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .site-nav-list .link {
@@ -72,25 +82,39 @@
 
   color: $maine-text-color;
   text-decoration: none;
+  @media screen and (min-width: 768px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
 .site-nav-list__item:not(:last-child) {
   margin-bottom: 32px;
-}
-
-.site-nav-list .current {
-  color: $accent-color;
+  @media screen and (min-width: 768px) {
+    margin: 0;
+  }
 }
 
 .header-contact__icon--mail,
 .header-contact__icon--tel {
   display: none;
+  @media screen and (min-width: 768px) {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: $secondary-text-color;
+    margin-right: 8px;
+  }
 }
 
 .header-contact {
   display: flex;
   flex-direction: column-reverse;
   margin-bottom: 64px;
+  @media screen and (min-width: 768px) {
+    margin: 0;
+    flex-direction: column;
+  }
 }
 .header-contact__link--tel {
   color: $accent-color;
@@ -106,14 +130,21 @@
   text-decoration: none;
 }
 
-// .menu-container__flex {
-//   display: flex;
-//   flex-direction: column;
-//   // не працює ЧОМУ!!!
-//   // justify-content: space-between;
-// }
+@media screen and (min-width: 768px) {
+  .header-contact__link--mail,
+  .header-contact__link--tel {
+    color: $secondary-text-color;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.167;
+  }
+}
+
 .mobile-menu-soclink-list {
   display: flex;
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 .mobile-menu-soclink-link {
@@ -122,14 +153,10 @@
   margin-right: 10px;
   padding-right: 10px;
   color: $accent-color;
-  // font-weight: 500;
   font-size: 18px;
   line-height: 1.222;
-  // letter-spacing: 0.02em;
   text-decoration: none;
 }
-
-// .mobile-menu-soclink-link:not(:last-child)::after{}
 
 .mobile-menu-soclink-link::after {
   position: absolute;
@@ -143,4 +170,26 @@
 }
 .mobile-menu-soclink-link--Linkedin::after {
   display: none;
+}
+
+.site-nav-list__item .current {
+  position: relative;
+  display: block;
+  color: $accent-color;
+
+  &::after {
+    position: absolute;
+    content: '';
+    bottom: 0;
+    left: 0;
+    display: block;
+    height: 4px;
+    width: 100%;
+    background-color: $accent-color;
+    border-radius: 2px;
+    align-self: flex-end;
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
+  }
 }
