--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -60,6 +60,10 @@
     font-size: 14px;
     line-height: 1.143;
   }
+  @media screen and (min-width: 1200px) {
+    border: 2px solid red;
+    width: 1200px;
+  }
 }
 
 .site-nav {
@@ -114,6 +118,9 @@
   @media screen and (min-width: 768px) {
     margin: 0;
     flex-direction: column;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
   }
 }
 .header-contact__link--tel {
