--- a/css/main.css
+++ b/css/main.css
@@ -759,6 +759,11 @@ body.modal-open {
 }
 
 /* =======================MODAL FORM======================= */
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
 .call-back {
   margin-top: 0;
   margin-bottom: 12px;
@@ -818,6 +823,9 @@ body.modal-open {
 }
 
 button.form-send {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-left: auto;
   margin-right: auto;
   width: 200px;
@@ -841,6 +849,10 @@ button.form-send:focus {
   background: #188ce8;
   background-origin: border-box;
   border: transparent;
+}
+
+div.relative {
+  position: relative;
 }
 
 .modal-form .name-icon,
