--- a/sass/layout/_modal-form.scss
+++ b/sass/layout/_modal-form.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
 }
 
-.call-back {
+.modal-form-text {
   margin-top: 0;
   margin-bottom: 12px;
 
@@ -14,6 +14,11 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: $maine-text-color;
+
+  @media screen and (max-width: 1199px) {
+    font-weight: 20px;
+    line-height: 1.5;
+  }
 }
 
 .name-label,
@@ -33,7 +38,7 @@
 .name-input,
 .tel-input,
 .email-input {
-  width: 448px;
+  width: 100%;
   height: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -65,7 +70,7 @@
   transition: border $transition-duration $transition-timing-function;
 }
 
-button.form-send {
+.button-form-send {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -131,6 +136,10 @@ div.relative {
   line-height: 1.714;
   letter-spacing: 0.03em;
   color: $secondary-text-color;
+  @media screen and (max-width: 1199px) {
+    font-size: 12px;
+    line-height: 1.167;
+  }
 
   &::after {
     position: absolute;
@@ -167,6 +176,10 @@ div.relative {
 
 .exept0 {
   margin-left: 4px;
+  @media screen and (max-width: 1199px) {
+    font-size: 12px;
+    line-height: 1.167;
+  }
 }
 
 .checkbox0:checked + .checkbox-label0::after {
