--- a/css/main.css
+++ b/css/main.css
@@ -364,33 +364,35 @@ body.modal-open {
 }
 
 /* ==============      HERO  =================== */
-.hero {
-  text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  max-width: 1600px;
-  min-height: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #2f303a;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/maine/hero-bg-opt.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.hero-title {
-  color: #ffffff;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.37;
-  letter-spacing: 0.06em;
-  margin-top: 0px;
-}
-
-@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+@media screen and (min-width: 480px) {
   .hero {
-    background-image: url(../images/maine/hero-bg@2x.jpg);
+    text-align: center;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    max-width: 480px;
+    min-height: 400px;
+    background-color: #2f303a;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/maine/hero/hero-mob.jpg);
+  }
+}
+
+@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/maine/hero/hero-mob@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .hero-title {
+    color: #ffffff;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.615;
+    letter-spacing: 0.06em;
+    margin-bottom: 30px;
   }
 }
 
@@ -896,7 +898,7 @@ div.relative {
 }
 
 .checkbox-label0 {
-  margin-left: 28px;
+  margin-left: 23px;
   display: block;
   font-weight: 400;
   font-size: 14px;
@@ -915,7 +917,7 @@ div.relative {
 .checkbox-label0::after {
   position: absolute;
   top: 50%;
-  left: 12px;
+  left: 1px;
   transform: translateY(-50%);
   content: '';
   display: inline-block;
