--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,41 +1,98 @@
 /* ==============      HERO  =================== */
 
 .hero {
-  text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  max-width: 1600px;
-  min-height: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: $hero-background;
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/maine/hero-bg-opt.jpg);
+  @media screen and (min-width: 480px) {
+    text-align: center;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    max-width: 480px;
+    min-height: 400px;
+    background-color: $hero-background;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/maine/hero/hero-mob.jpg);
 
-  &-title {
-    color: $primary-white-color;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.37;
-    letter-spacing: 0.06em;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/maine/hero/hero-mob@2x.jpg);
+    }
 
-    margin-top: 0px;
-    // margin-bottom: 30px;
+    &-title {
+      color: $primary-white-color;
+      font-weight: 900;
+      font-size: 26px;
+      line-height: 1.615;
+      letter-spacing: 0.06em;
+      margin-bottom: 30px;
+    }
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
-  .hero {
-    background-image: url(../images/maine/hero-bg@2x.jpg);
-  }
-}
+// .hero {
+//   text-align: center;
+//   padding-top: 200px;
+//   padding-bottom: 200px;
+//   max-width: 1600px;
+//   min-height: 600px;
+//   margin-left: auto;
+//   margin-right: auto;
+//   background-color: $hero-background;
+//   background-image: linear-gradient(
+//       to right,
+//       rgba(47, 48, 58, 0.4),
+//       rgba(47, 48, 58, 0.4)
+//     ),
+//     url(../images/maine/hero-bg-opt.jpg);
+
+//   background-repeat: no-repeat;
+//   background-position: center;
+//   background-size: cover;
+
+//   &-title {
+//     color: $primary-white-color;
+//     font-weight: 900;
+//     font-size: 44px;
+//     line-height: 1.37;
+//     letter-spacing: 0.06em;
+
+//     margin-top: 0px;
+//     // margin-bottom: 30px;
+//   }
+// }
+
+// @media screen and (min-width: 480px) {
+//   .hero {
+//     background-image: linear-gradient(
+//         to right,
+//         rgba(47, 48, 58, 0.4),
+//         rgba(47, 48, 58, 0.4)
+//       ),
+//       url(../images/maine/hero/hero-mob.jpg);
+
+//     @media screen and (min-device-pixel-ratio: 2),
+//       screen and (min-resolution: 192dpi),
+//       screen and (min-resolution: 2dppx) {
+//       .hero {
+//         background-image: linear-gradient(
+//             to right,
+//             rgba(47, 48, 58, 0.4),
+//             rgba(47, 48, 58, 0.4)
+//           ),
+//           url(../images/maine/hero/hero-mob@2x.jpg);
+//       }
+//     }
+//   }
+// }
