--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,12 @@ body.modal-open {
   text-decoration: none;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 /*================CONTAINER===============*/
 .container {
   width: 100%;
@@ -364,35 +370,66 @@ body.modal-open {
 }
 
 /* ==============      HERO  =================== */
-@media screen and (min-width: 480px) {
-  .hero {
-    text-align: center;
-    padding-top: 118px;
-    padding-bottom: 118px;
-    max-width: 480px;
-    min-height: 400px;
-    background-color: #2f303a;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/maine/hero/hero-mob.jpg);
-  }
+.hero {
+  text-align: center;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  max-width: 768px;
+  min-height: 400px;
+  background-color: #2f303a;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/maine/hero/hero-mob.jpg);
 }
 
-@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
+@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/maine/hero/hero-mob@2x.jpg);
   }
 }
 
-@media screen and (min-width: 480px) {
+.hero-title {
+  color: #ffffff;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.615;
+  letter-spacing: 0.06em;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 1600px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/maine/hero/hero-tablet.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/maine/hero/hero-tablet@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/maine/hero/hero-desktop.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/maine/hero/hero-desktop@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .hero-title {
-    color: #ffffff;
-    font-weight: 900;
-    font-size: 26px;
-    line-height: 1.615;
+    font-size: 44px;
+    line-height: 1.364;
     letter-spacing: 0.06em;
-    margin-bottom: 30px;
   }
 }
 
