--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,23 +1,51 @@
 /* ==============      HERO  =================== */
 
 .hero {
-  @media screen and (min-width: 480px) {
-    text-align: center;
-    padding-top: 118px;
-    padding-bottom: 118px;
-    max-width: 480px;
-    min-height: 400px;
-    background-color: $hero-background;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+  text-align: center;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  max-width: 768px;
+  min-height: 400px;
+  background-color: $hero-background;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/maine/hero/hero-mob.jpg);
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/maine/hero/hero-mob.jpg);
+      url(../images/maine/hero/hero-mob@2x.jpg);
+  }
+
+  &-title {
+    color: $primary-white-color;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.615;
+    letter-spacing: 0.06em;
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 1600px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/maine/hero/hero-tablet.jpg);
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
@@ -27,16 +55,34 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../images/maine/hero/hero-mob@2x.jpg);
+        url(../images/maine/hero/hero-tablet@2x.jpg);
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/maine/hero/hero-desktop.jpg);
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/maine/hero/hero-desktop@2x.jpg);
     }
 
     &-title {
-      color: $primary-white-color;
-      font-weight: 900;
-      font-size: 26px;
-      line-height: 1.615;
+      font-size: 44px;
+      line-height: 1.364;
       letter-spacing: 0.06em;
-      margin-bottom: 30px;
     }
   }
 }
