--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -1,68 +1,130 @@
-/* =============== BENEFITS =========== */
+// /* =============== BENEFITS =========== */
 
 .benefits {
-  // padding-top: 94px;
-  // padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 
-  & .list-title {
+  &-div-icon {
+    // text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+
+    // width: 100%;
+    // height: 100%;
+    max-width: 450px;
+    height: 120px;
+
+    background-color: $button-secondary-background;
+  }
+  &-list__title {
+    margin-bottom: 10px;
+    text-align: center;
+
     font-weight: 700;
     font-size: 14px;
-    line-height: 1.71;
+    line-height: 1.714;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-
-    margin-top: 0px;
-    // margin-bottom: 10px;
+    margin-bottom: 10px;
   }
-
-  & .benefits-details {
-    margin-top: 0px;
-    margin-bottom: 0px;
-
+  &-text {
+    margin: 0;
     color: $secondary-text-color;
     line-height: 1.71;
   }
-}
 
-.benefits-icon-list {
-  // display: flex;
-  // margin-bottom: 30px;
+  &__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 
-  & .item {
-    width: 270px;
-    height: 120px;
-    background-color: $button-secondary-background;
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    padding-bottom: 45px;
+    &__item:not(:last-child) {
+      margin-bottom: 15px;
+    }
+    &-list {
+      display: flex;
+      flex-wrap: wrap;
+      margin: -15px;
+    }
+    &__item {
+      margin: 15px;
+      flex-basis: calc(100% / 2 - 30px);
+      // flex-basis: calc((100%-60px) / 2);
+      // height: 251px;
+    }
+    &-list__title {
+      text-align: left;
+    }
   }
 }
 
-.benefits-icon-list .item + .item {
-  // margin-left: 30px;
+@media screen and (min-width: 1200px) {
+  &-list {
+    display: flex;
+  }
 }
 
-// %center-flex {
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
+// @media screen and (min-width: 768px) {
+//   width: 10px;
+//   height: 14px;
 // }
 
-.benefits-div-icon {
-  // @extend %center-flex;
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-  width: 100%;
-  height: 100%;
-}
+//    h3{
+//     margin-top: 0px;
+//     // margin-bottom: 10px;
+//   }
 
-.benefits-icon {
-  width: 70px;
-  height: 70px;
-}
+//   & .benefits-details {
+//     margin-top: 0px;
+//     margin-bottom: 0px;
 
-.benefits-list {
-  // display: flex;
-}
+//     color: $secondary-text-color;
+//     line-height: 1.71 ;
+//   }
+// }
 
-.benefits .item + .item {
-  // margin-left: 30px;
-}
+// .benefits-list {
+//   // display: flex;
+//   // margin-bottom: 30px;
+
+//   & .item {
+//     width: 270px;
+//     height: 120px;
+//     background-color: $button-secondary-background;
+//   }
+// }
+
+// .benefits-list .item + .item {
+//   // margin-left: 30px;
+// }
+
+// // %center-flex {
+// //   display: flex;
+// //   align-items: center;
+// //   justify-content: center;
+// // }
+
+// .benefits-div-icon {
+//   // @extend %center-flex;
+//   // display: flex;
+//   // justify-content: center;
+//   // align-items: center;
+//   width: 100%;
+//   height: 100%;
+// }
+
+// .benefits-icon {
+//   width: 70px;
+//   height: 70px;
+// }
+
+// .benefits-list {
+//   // display: flex;
+// }
+
+// .benefits .item + .item {
+//   // margin-left: 30px;
+// }
