--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -5,11 +5,12 @@
   padding-top: 118px;
   padding-bottom: 118px;
   max-width: 768px;
-  min-height: 400px;
+  max-height: 400px;
   background-color: $hero-background;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  // margin-bottom: 60px;
 
   background-image: linear-gradient(
       to right,
@@ -59,8 +60,11 @@
     }
   }
   @media screen and (min-width: 1200px) {
+    max-height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
+    margin-bottom: 94px;
+
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
@@ -83,6 +87,7 @@
       font-size: 44px;
       line-height: 1.364;
       letter-spacing: 0.06em;
+      margin-top: 0;
     }
   }
 }
