--- a/sass/components/_soc-links-team.scss
+++ b/sass/components/_soc-links-team.scss
@@ -1,8 +1,8 @@
 /* ========= soc-links-team================ */
 
 .socnetworks {
-  // display: flex;
-  // padding: 16px 32px 30px;
+  display: flex;
+  padding: 16px 32px 30px;
 
   & li {
     width: 44px;
@@ -13,9 +13,9 @@
 }
 
 .soclink {
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   padding: 0;
