--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,16 +1,9 @@
 /* ==================   TEAM  =============== */
-
+//
 .team {
-  // padding-top: 94px;
-  // padding-bottom: 94px;
-
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: $button-secondary-background;
-
-  &-list {
-    // display: flex;
-    margin: 0;
-    padding: 0;
-  }
 
   & .item {
     background-color: $primary-white-color;
@@ -24,10 +17,6 @@
     text-decoration: none;
     outline: none;
   }
-}
-
-.team-list .item + .item {
-  margin-left: 30px;
 }
 
 .team h3 {
@@ -53,4 +42,11 @@
 .team img {
   margin-top: 0px;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
