--- a/css/main.css
+++ b/css/main.css
@@ -246,6 +246,7 @@ img {
 /* ========= soc-links-team================ */
 .socnetworks {
   display: flex;
+  justify-content: center;
   padding: 16px 32px 30px;
 }
 
@@ -480,12 +481,6 @@ img {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1200px) {
-  .benefits {
-    padding-bottom: 45px;
-  }
-  .benefits__item:not(:last-child) {
-    margin-bottom: 15px;
-  }
   .benefits-list {
     display: flex;
     flex-wrap: wrap;
@@ -497,6 +492,9 @@ img {
   }
   .benefits-list__title {
     text-align: left;
+  }
+  .benefits__item:not(:last-child) {
+    margin-bottom: 15px;
   }
 }
 
@@ -586,7 +584,14 @@ img {
   background-color: #f5f4fa;
 }
 
+.team h2 {
+  margin-bottom: 30px;
+  text-align: center;
+}
+
 .team .item {
+  width: 450px;
+  margin-bottom: 30px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -598,10 +603,14 @@ img {
   outline: none;
 }
 
+.team img {
+  margin: 0 auto 30px;
+}
+
 .team h3 {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.192;
+  line-height: 1.188;
   text-align: center;
   margin-top: 0px;
   margin-bottom: 10px;
@@ -611,14 +620,21 @@ img {
   color: #757575;
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.17;
+  line-height: 1.188;
   text-align: center;
   margin-top: 0px;
 }
 
-.team img {
-  margin-top: 0px;
-  margin-bottom: 30px;
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+  .team .item {
+    margin: 15px;
+    flex-basis: calc(100% / 2 - 30px);
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -626,15 +642,57 @@ img {
     padding-top: 94px;
     padding-bottom: 94px;
   }
+  .team__list {
+    display: flex;
+    margin: -15px;
+  }
+  .team .item {
+    margin: 15px;
+    flex-basis: calc(100% / 4 - 60px);
+  }
 }
 
 /* ===============CLIENTS=========== */
+.clients {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.clients h2 {
+  margin-bottom: 30px;
+}
+
+.clients-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -15px;
+}
+
 .clients .item {
-  width: 170px;
-  height: 90px;
+  margin: 15px;
+  flex-basis: calc(100% / 4 - 60px);
+}
+
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  -list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .item {
+    width: 170px;
+    height: 90px;
+  }
 }
 
 .clients .link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   color: #afb1b8;
