--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,13 +1,36 @@
 /* ===============CLIENTS=========== */
 
 .clients {
-  // padding-top: 94px;
-  // padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  & h2 {
+    margin-bottom: 30px;
+  }
 
   &-list {
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+
+  & .item {
+    margin: 15px;
+    flex-basis: calc(100% / 4 - 60px);
+    // flex-basis: calc((100%-60px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
+  &-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   & .item {
@@ -17,9 +40,9 @@
 }
 
 .clients .link {
-  // display: flex;
-  //   justify-content: center;
-  // align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
 
@@ -36,10 +59,6 @@
     color: $accent-color;
     border: 1px solid $accent-color;
   }
-}
-
-.clients .item + .item {
-  // margin-left: 30px;
 }
 
 .clients-icon {
