--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -5,7 +5,15 @@
   padding-bottom: 60px;
   background-color: $button-secondary-background;
 
+  & h2 {
+    margin-bottom: 30px;
+    text-align: center;
+  }
+
   & .item {
+    width: 450px;
+    margin-bottom: 30px;
+
     background-color: $primary-white-color;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -17,12 +25,15 @@
     text-decoration: none;
     outline: none;
   }
+  & img {
+    margin: 0 auto 30px;
+  }
 }
 
 .team h3 {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.192;
+  line-height: 1.188;
   text-align: center;
 
   margin-top: 0px;
@@ -33,20 +44,40 @@
   color: $secondary-text-color;
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.17;
+  line-height: 1.188;
   text-align: center;
 
   margin-top: 0px;
 }
 
-.team img {
-  margin-top: 0px;
-  margin-bottom: 30px;
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+
+  .team .item {
+    margin: 15px;
+    flex-basis: calc(100% / 2 - 30px);
+    // flex-basis: calc((100%-60px) / 2);
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .team {
     padding-top: 94px;
     padding-bottom: 94px;
+  }
+  .team__list {
+    display: flex;
+    // flex-wrap: wrap;
+    margin: -15px;
+  }
+
+  .team .item {
+    margin: 15px;
+    flex-basis: calc(100% / 4 - 60px);
+    // flex-basis: calc((100%-60px) / 2);
   }
 }
