--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -25,3 +25,18 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.footer.container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+  }
+}
+
+// @media screen and (min-width: 768px) {
+// .footer.container {
+//     display: flex;
+//     align-items: baseline;
+//     justify-content: space-between;
+// }}
