--- a/css/main.css
+++ b/css/main.css
@@ -75,10 +75,11 @@ img {
 }
 
 @media screen and (min-width: 768px) {
-  .footer.container {
+  .footer .container {
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
+    justify-content: space-around;
   }
 }
 
@@ -842,6 +843,12 @@ img {
 
 .footer-form-email::placeholder {
   color: rgba(255, 255, 255, 0.6);
+}
+
+@media screen and (min-width: 768px) {
+  .footer-sign-up {
+    width: 450px;
+  }
 }
 
 .footer-sign-up-bth {
