--- a/sass/components/_soc-links.scss
+++ b/sass/components/_soc-links.scss
@@ -3,7 +3,8 @@
 .socnetworks {
   display: flex;
   justify-content: center;
-  padding: 16px 32px 30px;
+
+  // padding: 16px 32px 30px;
 
   & li {
     width: 44px;
@@ -11,6 +12,10 @@
     padding: 0;
     margin: 0;
   }
+}
+
+.team .socnetworks {
+  padding: 16px 32px 30px;
 }
 
 .soclink {
