--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,7 @@
 /*COMPONENTS*/
 @import './components/logo';
 @import './components/btn';
-@import './components/soc-links-team';
+@import './components/soc-links';
 
 /* LAYOUT*/
 @import './layout/page-header';
