--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -33,6 +33,11 @@
     align-items: baseline;
     justify-content: space-around;
   }
+
+  @media screen and (min-width: 1200px) {
+    align-items: baseline;
+    justify-content: space-between;
+  }
 }
 
 // @media screen and (min-width: 768px) {
