--- a/sass/layout/_footer-form.scss
+++ b/sass/layout/_footer-form.scss
@@ -39,6 +39,17 @@
   @media screen and (min-width: 768px) {
     width: 450px;
   }
+  // @media screen and (min-width: 1200px) {
+  //   width: 358px;
+  //   // display: flex;
+  //   // align-items: center;
+  // }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form .sign-up {
+    display: flex;
+  }
 }
 
 .footer-sign-up-bth {
@@ -49,8 +60,6 @@
 
   width: 200px;
   height: 50px;
-
-  // margin-left: 12px;
 
   font-weight: 700;
   font-size: 16px;
@@ -65,6 +74,9 @@
 
   border: transparent;
   cursor: pointer;
+  @media screen and (min-width: 1200px) {
+    margin-left: 12px;
+  }
 }
 
 .sign-up-icon {
