--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -11,7 +11,7 @@
   }
 
   & .item {
-    width: 450px;
+    // width: 450px;
     margin-bottom: 30px;
 
     background-color: $primary-white-color;
